[create-pull-request] automated change

--- a/.github/artifacts/customer/customer-kong.yaml
+++ b/.github/artifacts/customer/customer-kong.yaml
@@ -18,6 +18,12 @@ consumers:
   - sales
   - customer
   username: jsmith
+- keyauth_credentials:
+  - key: test-key
+  tags:
+  - sales
+  - customer
+  username: test
 plugins:
 - config:
     key_names:
